# libcrc

./: CMakeLists.txt
include/: checksum.h
src/: crc8.c
